--- a/resources/assets/js/lang/en.json
+++ b/resources/assets/js/lang/en.json
@@ -1,36 +1,1 @@
-{
-  "ok": "Ok",
-  "cancel": "Cancel",
-  "error_alert_title": "Oops...",
-  "error_alert_text": "Something went wrong! Please try again.",
-  "token_expired_alert_title": "Session Expired!",
-  "token_expired_alert_text": "Please log in again to continue.",
-  "login": "Log In",
-  "register": "Register",
-  "page_not_found": "Page Not Found",
-  "go_home": "Go Home",
-  "logout": "Logout",
-  "email": "Email",
-  "remember_me": "Remember Me",
-  "password": "Password",
-  "forgot_password": "Forgot Your Password?",
-  "confirm_password": "Confirm Password",
-  "error_passwords_dont_match": "The passwords must be identical.",
-  "success": "Success!",
-  "name": "Name",
-  "toggle_navigation": "Toggle navigation",
-  "home": "Home",
-  "you_are_logged_in": "You are logged in!",
-  "reset_password": "Reset Password",
-  "send_password_reset_link": "Send Password Reset Link",
-  "settings": "Settings",
-  "profile": "Profile",
-  "your_info": "Your Info",
-  "info_updated": "Your info has been updated!",
-  "update": "Update",
-  "your_password": "Your Password",
-  "password_updated": "Your password has been updated!",
-  "new_password": "New Password",
-  "login_with": "Login with",
-  "register_with": "Register with"
-}
+{"route":{"users":"users"},"general":{"ok":"Ok","cancel":"Cancel","name":"Name","home":"Home","settings":"Settings","profile":"Profile","email":"Email","update":"Update","logout":"Logout","login":"Log In","register":"Register","success":"Success!","password":"Password"},"modal":{"error":{"h":"Oops...","t":"Something went wrong! Please try again."},"token_expired":{"h":"Session Expired!","t":"Please log in again to continue."}},"error":{"page_not_found":"Page Not Found","passwords_dont_match":"The passwords must be identical."},"message":{"info_updated":"Your info has been updated!","password_updated":"Your password has been updated!"},"pages":{"auth":{"remember_me":"Remember Me","forgot_password":"Forgot Your Password?","send_password_reset_link":"Send Password Reset Link","confirm_password":"Confirm Password","reset_password":"Reset Password","your_password":"Your Password","new_password":"New Password"}},"go_home":"Go Home","toggle_navigation":"Toggle navigation","your_info":"Your Info"}
